<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">光光秀秀</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title">光光秀秀</string>
    <string name="hue">色调</string>
    <string name="saturation">饱和度</string>
    <string name="lum">明亮度</string>
    
    <string name="change">改变</string>
    <string name="reset">重置</string>
    
    <string name="PrimaryColor">基本操作</string>
    <string name="ColorMatrix">颜色矩阵</string>
    <string name="PixelEffect">像素变化</string>

</resources>
