<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <ImageView
        android:id="@+id/image" 
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_gravity="center"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp"
        />

    <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hue"
        android:textSize="24sp"
        />
    <SeekBar
        android:id="@+id/hue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
         />

    <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/saturation"
        android:textSize="24sp"/>
    <SeekBar
        android:id="@+id/saturation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
    
    <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/lum"
        android:textSize="24sp"
        />    
    <SeekBar
        android:id="@+id/lum"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

</LinearLayout>
